# exchange-ics-sync

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-build.yml
tests/: test_app.py
