[build-system]
requires = ["hatchling>=1.24.2", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "exchange-ics-sync"
dynamic = ["version"]
requires-python = ">=3.13"
dependencies = [
    "exchangelib==5.4.3",
    "fastapi==0.115.5",
    "icalendar==6.1.0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "uvicorn[standard]==0.32.1",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
include = ["app.py"]
